Fix contact's qrcode and nametag overflow

--- a/css/index.css
+++ b/css/index.css
@@ -202,7 +202,7 @@ a:visited {
 
 #line-qrcode, #instagram-tag {
     max-width: 150px;
-    height: auto;
+    max-height: 150px;
 }
 
 /*
